--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab1-Dom</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <script src="main.js"></script>
+    <h1 id="name1">Rana Almalki</h1>
+    <p id="paragraph" class="paragraph-color"> i Love video game and coding</p>
+
+    <img alt="logo">
+
+    <ul>
+        <h1>List</h1>
+     
+    </ul>
+
+   
+    <script src="/lab1-Dom/main.js"></script>
 </body>
 </html>
