--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="name1">Rana Almalki</h1>
+    <h1 class="name1">Rana Almalki</h1>
     <p id="paragraph" class="paragraph-color"> i Love video game and coding</p>
 
     <img alt="logo">
@@ -17,7 +17,7 @@
      
     </ul>
 <div>
-    
+
 </div>
    
     <script src="/lab1-Dom/main.js"></script>
